CCD-7988 build fix - pipeline quality gate