@@ -1,23 +1,27 @@
 package uk.gov.hmcts.ccd.domain.types;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import uk.gov.hmcts.ccd.data.definition.CaseDefinitionRepository;
 import uk.gov.hmcts.ccd.domain.model.definition.CaseFieldDefinition;
+import uk.gov.hmcts.ccd.domain.model.definition.FieldTypeDefinition;
 import uk.gov.hmcts.ccd.test.CaseFieldDefinitionBuilder;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.emptyCollectionOf;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 @DisplayName("RichTextAreaValidator")
@@ -26,29 +30,16 @@ class RichTextAreaValidatorTest {
     private static final JsonNodeFactory NODE_FACTORY = JsonNodeFactory.instance;
     private static final String FIELD_ID = "TEST_FIELD_ID";
 
-    @Mock
-    private BaseType richTextAreaBaseType;
-
-    @Mock
-    private CaseDefinitionRepository definitionRepository;
-
-    private RichTextAreaValidator validator;
-    private CaseFieldDefinition caseFieldDefinition;
+    private final RichTextAreaValidator validator = new RichTextAreaValidator();
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        FieldTypeDefinition richTextAreaType = baseTypeDefinition();
+        CaseDefinitionRepository definitionRepository = mock(CaseDefinitionRepository.class);
 
-        when(definitionRepository.getBaseTypes()).thenReturn(Collections.emptyList());
+        when(definitionRepository.getBaseTypes()).thenReturn(List.of(richTextAreaType));
         BaseType.setCaseDefinitionRepository(definitionRepository);
-        BaseType.initialise();
-
-        when(richTextAreaBaseType.getType()).thenReturn(RichTextAreaValidator.TYPE_ID);
-        BaseType.register(richTextAreaBaseType);
-
-        validator = new RichTextAreaValidator();
-
-        caseFieldDefinition = caseField().build();
+        BaseType.register(new BaseType(richTextAreaType));
     }
 
     @Test
@@ -56,86 +47,63 @@ class RichTextAreaValidatorTest {
         assertThat(validator.getType(), is(BaseType.get("RichTextArea")));
     }
 
-    @Test
-    void validate_shouldBeValidWhenNull() {
-        List<ValidationResult> results = validator.validate(FIELD_ID, null, caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
-
-        results = validator.validate(FIELD_ID, NODE_FACTORY.nullNode(), caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
+    @ParameterizedTest
+    @MethodSource("validEmptyValues")
+    void validate_shouldBeValidWhenNullOrEmpty(JsonNode value) {
+        assertThat(validate(value, caseField().build()), is(empty()));
     }
 
-    @Test
-    void validate_shouldBeValidWhenEmptyString() {
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.textNode(""),
-            caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
-    }
-
-    @Test
-    void validate_shouldBeValidWhenStringContainsMarkup() {
-        final List<ValidationResult> results = validator.validate(FIELD_ID,
-            NODE_FACTORY.textNode("<p><strong>Order</strong></p>"), caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
+    @ParameterizedTest
+    @ValueSource(strings = {"Some text", "<p><strong>Order</strong></p>", "xxx4"})
+    void validate_shouldBeValidWhenMinimumLengthRequirementMet(String value) {
+        assertThat(validate(NODE_FACTORY.textNode(value), caseField().withMin(4).build()), is(empty()));
     }
 
     @Test
     void validate_shouldNotBeValidWhenMinimumLengthRequirementNotMet() {
-        final CaseFieldDefinition caseFieldDefinition = caseField().withMin(4).build();
+        List<ValidationResult> results = validate(NODE_FACTORY.textNode("xxx"), caseField().withMin(4).build());
 
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.textNode("xxx"),
-            caseFieldDefinition);
-
-        assertThat(results, hasSize(1));
-        assertThat(results.get(0).getFieldId(), equalTo(FIELD_ID));
-        assertThat(results.get(0).getErrorMessage(), equalTo("requires a minimum length of 4"));
+        assertSingleError(results, "requires a minimum length of 4");
     }
 
     @Test
-    void validate_shouldBeValidWhenMinimumLengthRequirementMet() {
-        final CaseFieldDefinition caseFieldDefinition = caseField().withMin(4).build();
+    void validate_shouldIgnoreMaximumLengthAndRegexRequirements() {
+        CaseFieldDefinition constrainedField = caseField()
+            .withMax(4)
+            .withRegExp("\\d{4}-\\d{2}-\\d{2}")
+            .build();
 
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.textNode("xxx4"),
-            caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
-    }
-
-    @Test
-    void validate_shouldIgnoreMaximumLengthRequirement() {
-        final CaseFieldDefinition caseFieldDefinition = caseField().withMax(4).build();
-
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.textNode("xxx45"),
-            caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
-    }
-
-    @Test
-    void validate_shouldIgnoreRegexRequirement() {
-        final CaseFieldDefinition caseFieldDefinition = caseField().withRegExp("\\d{4}-\\d{2}-\\d{2}").build();
-
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.textNode("not-a-date"),
-            caseFieldDefinition);
-
-        assertThat(results, is(emptyCollectionOf(ValidationResult.class)));
+        assertThat(validate(NODE_FACTORY.textNode("not-a-date-and-longer-than-four"), constrainedField), is(empty()));
     }
 
     @Test
     void validate_shouldBeInvalidWhenValueProvidedIsNotText() {
-        final List<ValidationResult> results = validator.validate(FIELD_ID, NODE_FACTORY.numberNode(2),
-            caseFieldDefinition);
+        List<ValidationResult> results = validate(NODE_FACTORY.numberNode(2), caseField().build());
 
-        assertThat(results, hasSize(1));
-        assertThat(results.get(0).getFieldId(), equalTo(FIELD_ID));
-        assertThat(results.get(0).getErrorMessage(), equalTo("number is not a string"));
+        assertSingleError(results, "number is not a string");
     }
 
-    private CaseFieldDefinitionBuilder caseField() {
+    private static Stream<JsonNode> validEmptyValues() {
+        return Stream.of(null, NODE_FACTORY.nullNode(), NODE_FACTORY.textNode(""));
+    }
+
+    private List<ValidationResult> validate(JsonNode value, CaseFieldDefinition fieldDefinition) {
+        return validator.validate(FIELD_ID, value, fieldDefinition);
+    }
+
+    private static CaseFieldDefinitionBuilder caseField() {
         return new CaseFieldDefinitionBuilder(FIELD_ID).withType(RichTextAreaValidator.TYPE_ID);
+    }
+
+    private static FieldTypeDefinition baseTypeDefinition() {
+        FieldTypeDefinition fieldTypeDefinition = new FieldTypeDefinition();
+        fieldTypeDefinition.setType(RichTextAreaValidator.TYPE_ID);
+        return fieldTypeDefinition;
+    }
+
+    private static void assertSingleError(List<ValidationResult> results, String errorMessage) {
+        assertThat(results, hasSize(1));
+        assertThat(results.get(0).getFieldId(), equalTo(FIELD_ID));
+        assertThat(results.get(0).getErrorMessage(), equalTo(errorMessage));
     }
 }
